@@ -48,7 +48,7 @@
 #include <dmalloc.h>
 #endif
 
-static char software_version[] = "$Id: rpc.c,v 1.37 2005-01-09 13:25:23 freddy77 Exp $";
+static char software_version[] = "$Id: rpc.c,v 1.38 2005-01-10 08:50:56 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 static void rpc_clear(DBREMOTE_PROC * rpc);
@@ -357,6 +357,8 @@ param_info_alloc(TDSSOCKET * tds, DBREMOTE_PROC * rpc)
 			if (param_is_null) {
 				temp_datalen = 0;
 				temp_value = NULL;
+			} else if (is_fixed_type(temp_type)) {
+				temp_datalen = tds_get_size_by_type(temp_type);
 			}
 			temp_type = tds_get_null_type(temp_type);
 		} else if (is_fixed_type(temp_type)) {
@@ -383,6 +385,7 @@ param_info_alloc(TDSSOCKET * tds, DBREMOTE_PROC * rpc)
 				pcol->column_size = p->datalen;
 			}
 		}
+		pcol->on_server.column_size = pcol->column_size;
 
 		pcol->column_output = p->status;
 		pcol->column_cur_size = temp_datalen;
